5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4186/executions/1644_2447.log
== SUBMITION (2019-04-11 16:26:41) 
-- CODE:
num= float(input("preco: "))
num2= float(input("pagamento: "))
x= num-num2
y = num2-num

if (num > num2):
	print(round(x,2))
else:
	print(round(y,2))
-- EXECUTION TIME:
0.131213
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:26:43) 
-- CODE:
num= float(input("preco: "))
num2= float(input("pagamento: "))
x= num-num2
y = num2-num

if (num > num2):
	print(round(x,2))
else:
	print(round(y,2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:26:59) 
-- CODE:
num= float(input("preco: "))
num2= float(input("pagamento: "))
x= num-num2
y = num2-num

if (num > num2):
	print(round(x,2))
else:
	print(round(y,2))
-- EXECUTION TIME:
0.245111
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:27:07) 
-- CODE:
num= float(input("preco: "))
num2= float(input("pagamento: "))
x= num-num2
y = num2-num

if (num > num2):
	print(round(x,2))
else:
	print(round(y,2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:28:15) 
-- CODE:
num= float(input("preco: "))
num2= float(input("pagamento: "))
x= num-num2
y = num2-num

if (num > num2):
	print("Falta"(round(x,2))
else:
	print("Troco de"(round(y,2))
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:28:23) 
-- CODE:
num= float(input("preco: "))
num2= float(input("pagamento: "))
x= num-num2
y = num2-num

if (num > num2):
	print("Falta"(round(x,2))
else:
	print("Troco de"(round(y,2))
-- EXECUTION TIME:
0.156904
-- ERROR:
  File "/home/codebench/codes/1644/2447/main.py", line 8
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:28:23) 
-- CODE:
num= float(input("preco: "))
num2= float(input("pagamento: "))
x= num-num2
y = num2-num

if (num > num2):
	print("Falta"(round(x,2))
else:
	print("Troco de"(round(y,2))
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:29:15) 
-- CODE:
num= float(input("preco: "))
num2= float(input("pagamento: "))
x= num-num2
y = num2-num

if (num > num2):
	print("Falta" ,round(x,2))
else:
	print("Troco de" , round(y,2))
-- EXECUTION TIME:
0.196633
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
